# bitvm-zk-verifier

./: .gitignore  .gitmodules  Cargo.toml  Makefile  README.md  generate_proof_bytes.py  start.S
bitvm/: Cargo.toml
circuit-helpers/: Cargo.toml
circuit-helpers/src/: bitcoin.rs  config.rs  hashes.rs  lib.rs
examples/: Cargo.toml
examples/bitcoin-pow/: Cargo.toml  README.md
examples/bitcoin-pow/methods/: Cargo.toml
examples/bitcoin-pow/methods/guest/: Cargo.toml
examples/bitcoin-pow/methods/guest/src/: main.rs
examples/bitcoin-pow/src/: lib.rs  main.rs
examples/groth16/: Cargo.toml
examples/groth16-verifier/: Cargo.toml
examples/groth16-verifier/groth16/: Cargo.toml
examples/groth16-verifier/groth16/src/: circom.rs
examples/groth16-verifier/groth16/tests/: groth16.rs
examples/groth16-verifier/methods/: Cargo.toml
examples/groth16-verifier/methods/guest/: Cargo.toml
examples/groth16-verifier/src/: lib.rs  main.rs
examples/groth16-verifier/src/data/groth16/: proof.json  public.json  verification_key.json
examples/groth16/data/: proof.json  public.json  vk.json
examples/groth16/methods/: Cargo.toml
examples/groth16/methods/guest/: Cargo.toml
examples/groth16/methods/guest/src/: main.rs
examples/groth16/src/: lib.rs  main.rs
examples/hello-world/: Cargo.toml
examples/hello-world/methods/: Cargo.toml
examples/hello-world/methods/guest/: Cargo.toml
examples/hello-world/src/: lib.rs
groth16-verifier/: constants.h  constants_template.h  first_two_public.h  groth16_verifier.c  groth16_verifier.h  last_two_constants.h  last_two_public.c  last_two_public.h  main.c  proof.h  vk.h  zkverifier.c
linkers/: link.ld
risc0-circuit/: Cargo.toml
risc0-circuit/guest/: Cargo.toml
risc0-circuit/guest/src/: main.rs
risc0-groth16/: Cargo.toml
risc0tobitvm/: Cargo.toml
risc0tobitvm/src/: lib.rs  main.rs
src/: bitvm.rs  data.rs  lib.rs  main.rs
templates/: constants_template.h
work_dir/: output10.json  output5.json  proof.json  public_inputs.json
