[workspace.package]
version = "0.21.0"
edition = "2021"
license = "Apache-2.0"
homepage = "https://risczero.com/"
repository = "https://github.com/risc0/risc0/"

[workspace]
members = ["risc0tobitvm", "bitvm"]
resolver = "2"

[workspace.dependencies]
hex = "0.4.3"
risc0-core = { version="0.20.1" }
risc0-zkp = { version="0.20.1" }
risc0-zkvm = { version="0.20.1", features = ["prove"]}
env_logger = "0.10"
serde = "1.0"
serde_json = "1.0.108"
risc0-groth16 = {path = "groth16", features=["prove"]}
sha2 = {version="=0.10.6", default-features = false}
hello-world = {path="./examples/hello-world"}
bitcoin-pow = {path="./examples/bitcoin-pow"}
groth16 = {path="./examples/groth16"}
num-bigint = "0.4.4"
risc0-binfmt = "0.20.1"
blake3 = "1.5.0"
