[workspace]
members = ["risc0tobitvm", "bitvm"]
resolver = "2"

[workspace.dependencies]
hex = "0.4.3"
risc0-zkvm = { version="0.20.1", features = ["prove"]}
env_logger = "0.10"
serde = "1.0"
serde_json = "1.0.108"
risc0-groth16 = {path="risc0-groth16", features=["prove"]}
sha2 = {version="=0.10.6", default-features = false}
hello-world = {path="./examples/hello-world"}
bitcoin-pow = {path="./examples/bitcoin-pow"}
num-bigint = "0.4.4"
risc0-binfmt = "0.20.1"
blake3 = "1.5.0"
