[package]
name = "bitcoin-pow"
version = "0.1.0"
edition = "2021"

[dependencies]
bitcoin = { version = "0.31.1", features = ["bitcoinconsensus"] }
bitcoin-pow-methods = { path = "methods" }
hex = "0.4.3"
risc0-zkvm = "0.20.1"
serde = "1.0"

[features]
cuda = ["risc0-zkvm/cuda"]
default = []
metal = ["risc0-zkvm/metal"]
prove = ["risc0-zkvm/prove"]
