[package]
name = "risc0-groth16-verifier"
version = "0.1.0"
edition = "2021"

[dependencies]
groth16-verifier-methods = { path = "methods" }
risc0-groth16-old = { path = "groth16" }
risc0-zkvm = "0.20.1"
serde_json = "1.0"

[features]
cuda = ["risc0-zkvm/cuda"]
default = []
metal = ["risc0-zkvm/metal"]
prove = ["risc0-zkvm/prove"]
