[package]
name = "groth16"
version = "0.1.0"
edition = "2021"

[dependencies]
groth16-methods = { path = "methods" }
risc0-zkvm = { version = "0.20.1" }
risc0-groth16 = { path = "../../groth16" }
serde = "1.0"
serde_json = "1.0"

[features]
cuda = ["risc0-zkvm/cuda"]
default = []
metal = ["risc0-zkvm/metal"]
prove = ["risc0-zkvm/prove"]
