[package]
name = "guest"
version = "0.1.0"
edition = "2021"

[workspace]

[dependencies]
circuit-helpers = { path = "../../circuit-helpers" }
risc0-zkvm = { version = "0.19.1", default-features = false }
crypto-bigint = {version="=0.5.2", default-features = false}
sha2 = {version="=0.10.6", default-features = false}
serde = { version = "1.0", default-features = false }

[patch.crates-io]
# Placing these patch statement in the workspace Cargo.toml will add RISC Zero SHA-256 and bigint
# multiplication accelerator support for all downstream usages of the following crates.
sha2 = { git = "https://github.com/risc0/RustCrypto-hashes", tag = "sha2-v0.10.6-risczero.0" }
crypto-bigint = { git = "https://github.com/risc0/RustCrypto-crypto-bigint", tag = "v0.5.2-risczero.0" }
