[package]
name = "calculate-pow"
version = "0.1.0"
edition = "2021"

[workspace]

[dependencies]
risc0-zkvm = { path="../../../../../risc0/risc0/zkvm", default-features = false }
sha2 = { git = "https://github.com/risc0/RustCrypto-hashes", tag = "sha2-v0.10.6-risczero.0", default-features = false }
crypto-bigint = { git = "https://github.com/risc0/RustCrypto-crypto-bigint", tag = "v0.5.2-risczero.0", default-features = false }