[package]
name = "groth16-verifier"
version = "0.1.0"
edition = "2021"

[workspace]

[dependencies]
risc0-groth16-old = { path = "../../groth16" }
risc0-zkvm = { version = "0.20.1", default-features = false, features = ["std"] }
serde_json = { version = "1.0", default-features = false }

[patch.crates-io]
sha2 = { git = "https://github.com/risc0/RustCrypto-hashes", tag = "sha2-v0.10.6-risczero.0" }
