[package]
name = "verify-groth16"
version = "0.1.0"
edition = "2021"

[workspace]

[dependencies]
risc0-zkvm = { version = "0.20.1", default-features = false }
# ark-ff = { git = "https://github.com/arkworks-rs/algebra", default-features = false }
# ark-groth16 = { git = "https://github.com/arkworks-rs/groth16", default-features = false }
# ark-groth16 = { version = "0.4", default-features = false }
